2004/03/14 04:00 (-0500) muppetman

	* examples/adding_stock_icons.pl, examples/customrenderer.pl,
	examples/file_chooser.pl, examples/histogramplot.pl,
	examples/insert-text-test.pl, examples/testdnd.pl:
	improve commentary, so these make better examples.
 
	* examples/calendar.pl: remove cruft; use dialog's response rather
	than old-school manip of buttons.
 
	* examples/combo_box.pl: do something more interesting with the
	do-it-yourself cell renderer example.
 
2004/03/12 23:11 (-0500) muppetman

	* Gtk2.exports: fix missing symbols in the exports so we can link
	on win32

	* xs/GdkEvent.xs, xs/GdkProperty.xs, xs/GdkRgb.xs, xs/PangoLayout.xs:
	little warning fixes; signedness, returning from all paths or at least
	putting a note that the code is not reached, explicit casts, etc.

2004/03/12 16:00 (-0500) muppetman

	* Gtk2.pm, Makefile.PL, README: 1.04 will be released from
	the stable-1-04 branch; bump HEAD's version to 1.050.

2004/03/12 01:08 (-0500) muppetman

	* t/GdkDnd.t: get_selection() seems to fail when using Apple's X server,
	but not any others.  making it a TODO test.

	* t/GtkTreeStore.t, t/GtkListStore.t: correct skip counts

	* t/GtkProgressBar.t: use ok() for boolean tests, because false is
	sometimes '' and sometimes undef.

2004/03/11 23:20 (-0500) muppetman

	* README: give shout-outs to the examples and gtk-demo.

2004/03/12 03:09 (+0100) kaffeetisch

	* Gtk2.pm: Don't indent the abstract.

	D examples/colorselectiontest.pl
	* MANIFEST
	* TODO: Remove the entries about the color selection test (and get
	rid of the now needless example) and GdkRegion.

	* t/GtkProgressBar.t
	* xs/GtkProgressBar.xs: Allow and test undef for for the text
	parameter of [sg]et_text.

2004/03/09 00:06 (+0100) kaffeetisch

	* t/GtkListStore.t
	* t/GtkTreeStore.t: Test-drive both reorder functions a bit more.

	* xs/GdkEvent.xs: Apidoc fix:
	s/Gtk2::Gdk::main_do_event/Gtk2::main_do_event/.

	* xs/GtkTextView.xs: Use const for two GtkTreeIter's -- the